# flop

./: .gitignore  README.md  main.py  primer_presentacion.html  pyproject.toml  requirements.txt
bd/: bd1.sql  bd2.sql  procedures.sql
bd/sp/: sp_activar_usuario.sql  sp_actualizar_datos_personales.sql  sp_banear_usuario.sql  sp_calcular_fichas_mesa.sql  sp_cambiar_clave.sql  sp_codigo_mesa.sql  sp_conectar_usuario_partida.sql  sp_consultar_ultima_accion.sql  sp_crear_mesa.sql  sp_crear_tipo_accion.sql  sp_desactivar_usuario.sql  sp_hora_inicio_mesa.sql  sp_iniciar_partida.sql  sp_jugador_salir_mesa.sql  sp_lista_jugadores_mesa.sql  sp_listar_mesas_activas.sql  sp_listar_usuarios.sql  sp_obtener_estado_mesa.sql  sp_obtener_estado_partida.sql  sp_obtener_historial_acciones.sql  sp_obtener_usuario_id.sql  sp_registrar_accion.sql  sp_registrar_carta.sql  sp_registrar_usuario.sql  sp_terminar_mesa.sql  sp_terminar_partida.sql  sp_unir_jugador_mesa.sql  sp_validar_login.sql  sp_verificar_partida_activa.sql  sp_verificar_validez_mesa.sql
bd/triggers/: tg_regalar_creditos.sql
bd/vistas/: vw_cartas_registradas.sql  vw_historial_acciones.sql  vw_jugadores_partida.sql  vw_mesas_activas.sql  vw_partidas_activas.sql  vw_recargas_usuarios.sql  vw_resumen_mesas.sql  vw_resumen_partidas.sql  vw_tipos_accion.sql  vw_usuarios_activos.sql
client/web/: index.html  index2.html
server/: main.py
server/routers/: juego.py  usuarios.py
server/schemas/: mesa_schemas.py  usuarios_schemas.py
server/utils/: conection.txt  generador.py  helpers.py
