[project]
name = "flop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.138.1",
    "passlib>=1.7.4",
    "pip>=26.1.2",
    "pygame>=2.6.1",
    "pyodbc>=5.3.0",
    "treys>=0.1.8",
]
